# transition-from-data-analyst-to-data-engineer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  startup.sh  untitled.chat
ipython_scripts/: overrides.json
ipython_scripts/startup/: 01-sql-magics.ipy  02-pandas-display.py
notebooks/: sample.ipynb  workshop.ipynb
notebooks/.ipynb_checkpoints/: generate_data-checkpoint.py
